# gemm-zoo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmarks.md
bench/: bench_gemm_bf16_bf16_f32_m8k16.cpp  bench_xe_gemm_s8_s8_s32_m8k16.cpp  benchmark.hpp
cmake/: oneMath.cmake
intel/: README.md  builtins.hpp  cacheopts.hpp  defines.hpp  spirv_mma.hpp  xe_gemm_bf16_bf16_bf16_m8k16.hpp  xe_gemm_bf16_bf16_f32_m8k16.hpp  xe_gemm_s8_s8_s32_m8k16.hpp
intel/bench/: bench_naive.cpp  bench_xe_gemm_bf16_bf16_bf16_m8k16.cpp  benchmark.hpp
intel/kernels/: xe_gemm_bf16_bf16_bf16_m8k16.hpp  xe_gemm_bf16_bf16_f32_m32k32.hpp  xe_gemm_bf16_bf16_f32_m8k16.hpp  xe_gemm_s8_s8_s32_m8k16.hpp
intel/utils/: reference_kernel.hpp
nvidia/: defines.hpp
nvidia/bench/: bench_async_buffered_128x128x96_16x4x1_f32f32f32.cu  bench_bf16_mma_gemm.cu  bench_cublaslt.cu  bench_cublaslt_bf16.cu  bench_cublaslt_e4m3.cu  bench_cublaslt_e5m2.cu  bench_cublaslt_fp16.cu  bench_cublaslt_tf32.cu  bench_double_buffered_128x128x64_16x4x1_f32f32f32.cu  bench_fp16_mma_gemm.cu  bench_naive.cu  bench_rmem_64x128x128_2x4x4_f32f32f32.cu  bench_tf32_mma_gemm.cu  bench_tiling_64x128x128_f32f32f32.cu
nvidia/kernel_functors/: async_buffered_gemm.cuh  bf16_mma_gemm.cuh  cublaslt_gemm.cuh  double_buffered_gemm.cuh  fp16_mma_gemm.cuh  generic_gemm.cuh  naive_gemm.cuh  rmem_tiled_gemm.cuh  smem_tiled_gemm.cuh  tf32_mma_gemm.cuh
nvidia/kernels/: copy.cuh  double_buffered_gemm.cuh  generic_gemm.cuh  hilbert.cuh  load_async.cuh  morton_encoding.cuh  naive_gemm.cuh  ring_buffer.cuh  rmem_tiled_gemm.cuh  tiled_gemm.cuh  utils.cuh
nvidia/kernels/sm_80/: async_buffered_gemm.cuh  bf16_mma_gemm.cuh  fp16_mma_gemm.cuh  tf32_mma_gemm.cuh
nvidia/utils/: benchmark.cuh  compare.cuh  cublaslt_gemm.cuh  fill_data.cuh
test/: utils.hpp
utils/: defines.hpp  reference_kernel.hpp
